    to groupselections (PR #2610, Issue #2429)
  * PersistenceLength.plot() now create new axes if current axes not provided (Issue #2590)
  * Added a correlations module to provide functionality for analysis modules to
    calculate the discrete autocorrelation function in a standardised way. Added
    the capability to allow intermittent behaviour (PR #2256)

Changes
  * Refactored dihedral selections and Ramachandran.__init__ to speed up 
    dihedral selections for faster tests (Issue #2671, PR #2706)
  * Removes the deprecated `t0`, `tf`, and `dtmax` from
    :class:Waterdynamics.SurvivalProbability. Instead the `start`, `stop` and
    `tau_max` keywords should be passed to
    :meth:`Waterdynamics.SurvivalProbability.run`. Furthermore, the `stop`
    keyword is now exclusive instead of inclusive (Issue #2524).
  * :meth:`align.fasta2select` now writes `alnfilename` and `treefilename` to
    the current working directory (Issue #2701)
  * Removes duplicate `NUMBER_TO_ELEMENTS` table from topology._elements,
    `Z2SYMB` from topology.tables should now be used instead (Issue #2699)
  * Deprecated :class:`ProgressMeter` and replaced it with :class:`ProgressBar` using
    the tqdm package (Issue #928, PR #2617). Also fixes issue #2504.
  * Removed `details` from `ClusteringMethod`s (Issue #2575, PR #2620)
  * Removed deprecated :meth:`PersistenceLength.perform_fit` (Issue #2596)
  * Changed :meth:`PSAnalysis.generate_paths` keywords `store` and `filename`
    defaults to `False` and `None` (Issue #2593)
  * Removed `format` keyword from :meth:`MemoryReader.timeseries` (Issue #1453,
    #2443)
  * Deprecated :class:`LAMMPSDataConverter` has now been removed (Issue #2564)
  * Removed AtomGroup stubs (PR #1070, Issue #2443).
  * encore.hes() doesn't accept the details keyword anymore, it always returns
    the relevant details instead, consistently with ces() and dres(), in the
    form of a dictionary (Issue #2465)